# pinxi

./: README.md  pyproject.toml
dev/: git_practices.md
pinxi/cli/: cli.py
