[tool.poetry]
name = "pinxi"
version = "0.1.0"
description = "Python inxi"
authors = ["Stanislav D. Kudriavtsev <staniskudriavtsev@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
